fix tray icons spacing

--- a/unite@hardpixel.eu/stylesheet.css
+++ b/unite@hardpixel.eu/stylesheet.css
@@ -51,7 +51,7 @@
   border: 0;
 }
 
-#panel .tray-buttons-box {
+#panel .tray-icons-box {
   spacing: 10px;
   margin-top: 2px;
   margin-bottom: 2px;
